# Lab06

./: .gitignore  CMakeLists.txt  README.md
.github/workflow/: release.yml
.github/workflows/: release.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
